# QM-Quine-McCluskey--algorithm

./: CMakeLists.txt  README.md
src/: logicalExpr.cpp  logicalExpr.h  simplify.cpp  simplify.h  util.cpp  util.h
tests/: test.cpp
